[package]
name = "phase2"
version = "0.2.2"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "Library for performing MPCs for creating zk-SNARK public parameters"
documentation = "https://docs.rs/phase2"
homepage = "https://github.com/ebfull/phase2"
license = "MIT/Apache-2.0"
repository = "https://github.com/ebfull/phase2"

[dependencies]
num_cpus = "1"
rand = "0.4"
byteorder = "1"
crossbeam = "0.7.3"
blake2 = "0.9.2"
blake2-rfc = "0.2"
bellman_ce = { version = "^0.3", features = ["nolog"], default-features = false }
pairing_ce = "^0.21"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
multicore = ["bellman_ce/multicore"]
